# entt_snapshot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
include/entt_snapshot/: Archive.hpp  Reflection.hpp  Snapshot.hpp  entt_snapshot.hpp
include/entt_snapshot/include_proxy/: cereal.hpp
src/: Archive.cpp  Reflection.cpp  Snapshot.cpp
test/: main.cpp
